[gd_scene load_steps=19 format=2]

[ext_resource path="res://Sprites/Niveau1/boss_aieaieaie.png" type="Texture" id=1]
[ext_resource path="res://BossBar.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Niveau1/marche_boss_1.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Niveau1/marche_boss_2.png" type="Texture" id=4]
[ext_resource path="res://Sprites/kevin_jump2.png" type="Texture" id=5]
[ext_resource path="res://Sprites/kevin_jump.png" type="Texture" id=6]
[ext_resource path="res://Sprites/kevin_drink.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Niveau1/boss_perdu.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Niveau1/boss_bar222.png" type="Texture" id=9]
[ext_resource path="res://Sprites/kevin_idle_gun.png" type="Texture" id=10]
[ext_resource path="res://Sprites/kevin_walk_gun.png" type="Texture" id=11]
[ext_resource path="res://Sprites/kevin_walk_gun2.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Niveau1/boss_attaque.png" type="Texture" id=13]
[ext_resource path="res://Sprites/kevin_joint.png" type="Texture" id=14]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 9 ) ],
"loop": false,
"name": "idle",
"speed": 0.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "joint",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 5 ) ],
"loop": false,
"name": "jump",
"speed": 4.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "punch",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "punch",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "drink",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "walk_gun",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "idle_gun",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16.3825, 39.581 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 186.5, 100 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 20.9289, 7.61533 )

[node name="BossBar" type="KinematicBody2D" groups=[
"Ennemy",
]]
position = Vector2( 0, -0.667419 )
scale = Vector2( 1.4, 1.2 )
collision_layer = 33
collision_mask = 33
script = ExtResource( 2 )

[node name="Kevin" type="AnimatedSprite" parent="."]
position = Vector2( -0.594604, 2.56763 )
frames = SubResource( 1 )
animation = "punch"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3.3355, 9.37223 )
shape = SubResource( 2 )

[node name="Cooldown" type="Timer" parent="."]

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="TriggerArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TriggerArea"]
shape = SubResource( 3 )

[node name="AttackArea" type="Area2D" parent="."]
position = Vector2( -13.3484, 15.2553 )
scale = Vector2( 1, 2.67115 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( -12.2793, -2.99863 )
shape = SubResource( 4 )
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="body_entered" from="TriggerArea" to="." method="_on_TriggerArea_body_entered"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_AttackArea_body_entered"]
